Twenty Fourteen: don't allow line-wrapping in the top-level navigation menu items. Props georgestephanis, fixes #24917. Built from https://develop.svn.wordpress.org/trunk@25061
git-svn-id: http://core.svn.wordpress.org/trunk@25047 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -847,6 +847,7 @@ body {
 	padding: 0 10px;
 	padding: 0 1.0rem;
 	text-decoration: none;
+	white-space: nowrap;
 }
 .primary-navigation ul ul {
 	background-color: rgba(0, 0, 0, 0.9);
@@ -872,6 +873,7 @@ body {
 	padding: 0.9rem 1.2rem;
 	width: 148px;
 	width: 14.8rem;
+	white-space: normal;
 }
 .primary-navigation ul ul li {
 }
